# aiops-cloud

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  styles.css
helm/aiops-hub/: Chart.yaml  values.yaml
helm/aiops-hub/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
src/aiops_hub/: __init__.py  ai_triage.py  api.py  auth.py  cli.py  config.py  exceptions.py  models.py  registry.py  runbooks.py  service.py  state_store.py
src/aiops_hub/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
tests/: test_controls.py  test_runbooks.py  test_triage.py
